# viapal

./: .#dashboard.md  .env.example  .gitignore  .sync  PLAN.md  README.md  dashboard.md  docker-compose.yml  justfile  local.py.example
backend/: .dockerignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini  uwsgi.ini
backend/apps/accounting/: admin.py  admin_views.py  api_urls.py  apps.py  serializers.py  test_api.py  test_saldi_live.py  test_settlement.py  tests.py  views.py
backend/apps/accounting/migrations/: 0001_initial.py  0002_ownerledgerentry_riferimento_receivable_and_more.py  0003_remove_ownerledgerentry_riferimento_charge_and_more.py  (+3 more)
backend/apps/accounts/: apps.py  impersonation.py  impersonation_views.py  inviti.py  permissions.py  serializers.py  signals.py  test_impersonation.py  test_inviti.py  tests.py  urls.py  views.py
backend/apps/billing/: _dates.py  _payments.py  admin.py  admin_inlines.py  admin_views.py  api_urls.py  apps.py  dashboard_urls.py  dashboard_views.py  serializers.py  signals.py  test_api.py  test_crud_anagrafiche.py  test_emissione_utenze.py  tests.py  tests_calc.py  tests_rent_gen.py  views.py
backend/apps/billing/calc/: avvisi.py  (+4 more)
backend/apps/notifications/: admin.py  api_urls.py  apps.py  push.py  serializers.py  test_api.py  test_crud.py  test_push.py  tests.py  views.py
backend/apps/properties/: admin.py  api_urls.py  apps.py  context.py  serializers.py  signals.py  test_api.py  test_cross_property.py  test_crud_anagrafiche.py  test_property_api.py  tests.py  views.py
backend/core/: _dat_compat.py  _jmb_filters_compat.py  dashboard.py  urls.py
backend/core/settings/: __init__.py  base.py  dev.py  production.py  staging.py
backend/scripts/: sanifica_utenze_2023.py
(+270 files in other folders)
