[project]
name = "core-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dj-cmd>=1.0.0",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.4",
    "django-allauth[socialaccount]>=65.16.1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
