[project]
name = "core-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dj-cmd>=1.0.0",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.4",
    "django-admin-tools>=0.9.3",
    "django-allauth[socialaccount]>=65.16.1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-hijack>=3.7.8",
    "djangorestframework>=3.17.1",
    "jmb-filters>=2.1.0",
    "jmb-jadmin>=2.1.11",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pywebpush>=2.3.0",
    "segno>=1.6.6",
    "unicodecsv>=0.14.1",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

# TRIAL: jmb-filters 2.1.0 non ancora pubblicato — installato dal wheel locale
# per provare advanced_search_autocomplete_fields. Rimuovere quando 2.1.0 è su pypi.thux.dev.
[tool.uv.sources]
jmb-filters = { path = "/home/sandro/src/thux/CODE/jmb/jmb-filters/dist/jmb_filters-2.1.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "thux"
url = "https://pypi.thux.dev/"
